# Clanker

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  WRITE_ACCESS_TEST.md  docker-compose.yml  install.ps1  install.sh  pyproject.toml  repository.yaml
.github/workflows/: build-image.yml  ci.yml
addon/: Dockerfile  config.yaml  run.sh
clanker/: __init__.py  config.py  logging.py  main.py
clanker/announce/: __init__.py  deliver.py  occupancy.py  quiet_hours.py  router.py
clanker/brain/: __init__.py  anthropic.py  base.py  ollama.py  openai.py  router.py
clanker/conversation/: __init__.py  agent.py  fast_intent.py  server.py  session.py  streaming.py
clanker/ha/: __init__.py  client.py  events.py  services.py
clanker/mcp/: __init__.py  server.py
clanker/memory/: __init__.py  base.py  semantic.py  structured.py  tools.py
clanker/proactive/: __init__.py  briefing.py  scheduler.py
clanker/remote/: __init__.py  chat.py  push.py  sms.py
clanker/setup/: __init__.py  cli.py  discovery.py  ollama.py  remote.py  ssh_keys.py  validate.py  voice.py  wakeword.py  web.py  wizard.py
clanker/vision/: __init__.py  faces.py  frigate.py  vlm.py
config/: clanker.yaml.example
docs/: architecture.md  hardware.md  install.md  quickstart.md  recommended-build.md  safety.md
ha_addon/clanker/: CHANGELOG.md  run.sh  (+2 more)
image/: build-image.sh  provision.sh
tests/: test_announce_router.py  test_brain_router.py  test_config.py  test_conversation_agent.py  test_faces.py  test_fast_intent.py  test_frigate.py  test_memory_structured.py  test_ollama_provider.py  test_openai_provider.py  test_proactive_handlers.py  test_scheduler.py  test_semantic_memory.py  test_session.py  test_setup_wizard.py  test_sms.py  test_streaming.py  test_telegram.py  test_vlm.py
(+9 files in other folders)
