[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clanker"
version = "0.1.0"
description = "LLM-powered smart home assistant on top of Home Assistant"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Nolan Kramer" }]
keywords = ["home-assistant", "llm", "smart-home", "voice-assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
]
dependencies = [
    "anthropic>=0.40",
    "openai>=1.50",
    "httpx>=0.27",
    "websockets>=13",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "pyyaml>=6.0",
    "aiosqlite>=0.20",
    "chromadb>=0.5",
    "apscheduler>=3.10,<4",
    "structlog>=24",
    "mcp>=1.0",
    "python-dotenv>=1.0",
]

[project.scripts]
clanker = "clanker.main:main"
clanker-setup = "clanker.setup.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.12",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
